--- a/admindashboard/src/components/sidebar/sidebar.scss
+++ b/admindashboard/src/components/sidebar/sidebar.scss
@@ -82,6 +82,9 @@
             &:nth-child(2){
                 background-color: #333;
             }
+            &:nth-child(3){
+              background-color: darkblue;
+            }
         }
     }
   }
